LU-2823 obdfilter: always return last id when del orphan

In filter_destroy_precreated(), it should still return the last id
even if the fo_destroy_in_progress was cleared already, otherwise
the last_id on MDS will not be synced with the last_id on obdfilter.

Test-Parameters: envdefinitions=SLOW=yes,ENABLE_QUOTA=yes \
clientdistro=el6 serverdistro=el5 \
clientarch=x86_64 serverarch=x86_64 \
nettypes=o2ib clientibstack=inkernel \
serveribstack=inkernel testlist=large-scale

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: I01a5a5da201e227c139c3406adcaa896e5d5b71f